--- a/index.html
+++ b/index.html
@@ -1,3 +1,244 @@
-<html>
-  <h1>Index</h1>
+<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Juraj Doncevic - Personal Website</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="./static/css/main.css" rel="stylesheet">
+  <script src="./static/js/email_protection.js"></script>
+</head>
+
+<body>
+  <main>
+    <div class="container">
+
+      <h1>Juraj's Personal Website</h1>
+      <h4 class="link-secondary no-decoration">Just like the 90s, but with Bootstrap!
+      </h4>
+      <div class="mb-md-5 mb-2"></div>
+      <div class="row">
+        <div class="col-md-4 col-12 order-0 order-md-1">
+          <div class="card border-dark">
+            <img src="./static/images/JurajDoncevic.webp" class="card-img-top img-fluid" />
+            <div class="card-body">
+              MSc. (mag. ing.)<br />
+              Teaching Assistant<br />
+              @ZPR-FER-UNIZG<br />
+              <a href="javascript:startMail('hwne.wbqpairpvs@eru.e');"><span id="v1mail_1_642db265bcae7"></span>
+                <script
+                  type="text/javascript">document.getElementById('v1mail_1_642db265bcae7').innerHTML = convertMail('hwne.wbqpairpvs@eru.e');</script>
+              </a><br />
+              <br />
+              <div class="text-center">
+                <a href="https://www.fer.unizg.hr/juraj.doncevic"><img class="img-thumbnail"
+                    src="./static/images/FER_logo.png"></a>
+                <a href="https://github.com/JurajDoncevic"><img class="img-thumbnail"
+                    src="./static/images/github_logo.png"></a>
+                <a href="https://www.researchgate.net/profile/Juraj-Doncevic"><img class="img-thumbnail"
+                    src="./static/images/researchgate_logo.png"></a>
+                <a href="https://orcid.org/0000-0001-5221-6848"><img class="img-thumbnail"
+                    src="./static/images/orcid_logo.png"></a><br />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8 col-12 order-1 order-md-0 mt-3 mt-md-0">
+          <p>
+            <b>Juraj Dončević MSc.</b> is a PhD student and teaching assistant at the Faculty of Electrical Engineering,
+            University
+            of Zagreb. He is currently employed at the Department for Applied Computing.
+          </p>
+          <p>
+            Currently focused on researching software architecture, software design, data management,
+            bidirectionalization and functional programming. Long-standing organizer
+            of the Open Doors Day at FER for the Department of Applied Computing, promoting STEM to younger students.
+            Proficient in multiple programming languages and techonologies. Currently working on his PhD thesis:
+            "Extension of the mediator-wrapper architecture for heterogeneous data source integration by adding a mask".
+          </p>
+          <div class="row justify-content-center">
+            <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0">
+              <p>
+                He is <b>interested</b> in:
+                <b>
+                  <ul>
+                    <li>Software architectures</li>
+                    <li>Software design</li>
+                    <li>Data management</li>
+                    <li>Functional programming</li>
+                    <li>Bidirectional transformations</li>
+                    <li>Category theory</li>
+                    <li>Type theory</li>
+                  </ul>
+                </b>
+              </p>
+            </div>
+            <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0 offset-lg-1">
+              <b>Proficient</b> in:
+              <ul>
+                <li><b>Languages:</b> C\#, F\#, Python, Haskell, C, Java, Javascript, </li>
+                <li><b>Frameworks:</b> .NET (ASP, WPF), Spring, Express.js, Django, Flask</li>
+                <li><b>Databases:</b>MSSQL, MySQL, Postgres, MongoDb, Sqlite, LiteDb</li>
+                <li><b>Specialized libraries:</b> ANTLR4</li>
+              </ul>
+              <b>Wants to</b> learn or get better at:
+              <ul>
+                <li>Haskell</li>
+                <li>Rust</li>
+                <li>Scala</li>
+              </ul>
+              Loves &#127876;Advent of Code&#127876; in:
+              <ul>
+                <li>F#</li>
+                <li>Haskell</li>
+                <li>Python</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <h3>Selected projects</h3>
+        <div class="row justify-content-center">
+          <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
+            <div class="card border-dark">
+              <img src="./static/images/Janus_logo.png" class="img-fluid card-img" />
+              <a href="https://github.com/JurajDoncevic/Janus">
+                <h4 class="card-header">Janus</h4>
+              </a>
+              <div class="card-body">
+                <p>A heterogeneous data source integration and management system</p>
+                <p>PhD thesis experimental project... AND BEYOND</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
+            <div class="card border-dark">
+              <img src="./static/images/CreppyCrawly_logo.png" class="img-fluid card-img" />
+              <a href="https://github.com/JurajDoncevic/CreepyCrawly">
+                <h4 class="card-header">CreepyCrawly</h4>
+              </a>
+              <div class="card-body">
+                <p>
+                  A scriptable web crawler and scraper with a rudimentary language called CrawLang implemented with
+                  ANTLR4
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
+            <div class="card border-dark">
+              <img src="./static/images/Hammurabi_logo.png" class="img-fluid card-img" />
+              <h4 class="card-header">Hammurabi</h4>
+              <div class="card-body">
+                <p>A law office court files simulator for secondary school students</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-0 mt-lg-2">
+          <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
+            <div class="card border-dark">
+              <img src="./static/images/hdbs_general.png" class="img-fluid card-img" />
+              <a href="https://github.com/JurajDoncevic/hdbs">
+                <h4 class="card-header">HDBS</h4>
+              </a>
+              <div class="card-body">
+                <p>
+                  A monolithic heterogeneous database integration system with an experimental GlobalSQL query language
+                  implemented with ANTLR4
+                </p>
+                <p>Master's thesis project</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
+            <div class="card border-dark">
+              <img src="./static/images/QGen_logo.png" class="img-fluid card-img" />
+              <a href="https://github.com/JurajDoncevic/QGen">
+                <h4 class="card-header">QGen</h4>
+              </a>
+              <div class="card-body">
+                <p>A simple desktop app for generating exam questions over parametrized question type templates using
+                  OpenAI's GPT completion model</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <h3>Selected publications</h3>
+        <ul class="no-bullets">
+          <li>Dončević, J., Fertalj, K., Brčić, M., & Krajna, A. (2023). Mask–Mediator–Wrapper: A Revised
+            Mediator–Wrapper Architecture for Heterogeneous Data Source Integration. Applied Sciences, 13(4), Article 4.
+            <a href="https://doi.org/10.3390/app13042471">https://doi.org/10.3390/app13042471</a>
+          </li>
+          <li>Krajna, A., Brcic, M., Lipic, T., & Doncevic, J. (2022). Explainability in reinforcement learning:
+            Perspective and position (arXiv:2203.11547). arXiv. <a
+              href="https://doi.org/10.48550/arXiv.2203.11547">https://doi.org/10.48550/arXiv.2203.11547</a></li>
+          <li>Dončević, J., Fertalj, K., Brčić, M., & Kovač, M. (2022). Mask-Mediator-Wrapper architecture as a Data
+            Mesh driver (arXiv:2209.04661). arXiv. <a
+              href="https://doi.org/10.48550/arXiv.2209.04661">https://doi.org/10.48550/arXiv.2209.04661</a></li>
+          <li>Dončević, J., & Fertalj, K. (2020). Database Integration Systems. 2020 43rd International Convention on
+            Information, Communication and Electronic Technology (MIPRO), 1617–1622.
+            <a href="https://doi.org/10.23919/MIPRO48935.2020.9245245">//doi.org/10.23919/MIPRO48935.2020.9245245</a>
+          </li>
+          <li>D. Mlinarić, V. Mornar and J. Dončević, "Ranking model for dormitory admission process," 2022 45th
+            Jubilee International Convention on Information, Communication and Electronic Technology (MIPRO), 2022, pp.
+            1088-1092, doi: <a
+              href="https://doi.org/10.23919/MIPRO55190.2022.9803654">10.23919/MIPRO55190.2022.9803654</a>.</li>
+        </ul>
+      </div>
+      <div class="row mt-3">
+        <h3>Favourite books</h3>
+        <div class="row justify-content-center">
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/buonanno_csharp.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/milewski_category_theory.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/ford_building-evolutionary-architectures.jpeg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/abelson_sussman_SICP.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/richards_ford_fundamentals.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/pierce_category_theory.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/ddia_kleppman.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/dehghani_data_mesh.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/pierce_type_theory.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/wlaschin_fsharp.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/ford_richards_soft_arch_hard_parts.jpg" />
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </main>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+  integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+  integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+
 </html>
