forgot to reference webp files

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
             <div class="card border-dark">
-              <img src="./static/images/Janus_logo.png" class="img-fluid card-img" />
+              <img src="./static/images/Janus_logo.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/Janus">
                 <h4 class="card-header">Janus</h4>
               </a>
@@ -117,7 +117,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
             <div class="card border-dark">
-              <img src="./static/images/CreppyCrawly_logo.png" class="img-fluid card-img" />
+              <img src="./static/images/CreppyCrawly_logo.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/CreepyCrawly">
                 <h4 class="card-header">CreepyCrawly</h4>
               </a>
@@ -131,7 +131,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
             <div class="card border-dark">
-              <img src="./static/images/Hammurabi_logo.png" class="img-fluid card-img" />
+              <img src="./static/images/Hammurabi_logo.webp" class="img-fluid card-img" />
               <h4 class="card-header">Hammurabi</h4>
               <div class="card-body">
                 <p>A law office court files simulator for secondary school students</p>
@@ -142,7 +142,7 @@
         <div class="row justify-content-center mt-0 mt-lg-2">
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
             <div class="card border-dark">
-              <img src="./static/images/hdbs_general.png" class="img-fluid card-img" />
+              <img src="./static/images/hdbs_general.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/hdbs">
                 <h4 class="card-header">HDBS</h4>
               </a>
@@ -157,13 +157,14 @@
           </div>
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
             <div class="card border-dark">
-              <img src="./static/images/QGen_logo.png" class="img-fluid card-img" />
+              <img src="./static/images/QGen_logo.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/QGen">
                 <h4 class="card-header">QGen</h4>
               </a>
               <div class="card-body">
                 <p>A simple desktop app for generating exam questions over parametrized question type templates using
                   OpenAI's GPT completion model</p>
+                <p>As presented at <a href="https://cuc.carnet.hr/2023/">CUC 2023</a></p>
               </div>
             </div>
           </div>
