--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Juraj Doncevic - Personal website">
+  <meta name="author" content="Juraj Doncevic">
+  <meta name="keywords" content="Doncevic, FER, Software">
   <title>Juraj Doncevic - Personal Website</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
