--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h3>Selected projects</h3>
         <div class="row justify-content-center">
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
-            <div class="card border-dark">
+            <div class="card card-project border-dark">
               <img src="./static/images/Janus_logo.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/Janus">
                 <h4 class="card-header">Janus</h4>
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
-            <div class="card border-dark">
+            <div class="card card-project border-dark">
               <img src="./static/images/CreppyCrawly_logo.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/CreepyCrawly">
                 <h4 class="card-header">CreepyCrawly</h4>
@@ -133,18 +133,19 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
-            <div class="card border-dark">
+            <div class="card card-project border-dark">
               <img src="./static/images/Hammurabi_logo.webp" class="img-fluid card-img" />
               <h4 class="card-header">Hammurabi</h4>
               <div class="card-body">
                 <p>A law office court files simulator for secondary school students</p>
+                <p>As presented at <a href="https://cuc.carnet.hr/2019/index.html">CUC 2019</a></p>
               </div>
             </div>
           </div>
         </div>
         <div class="row justify-content-center mt-0 mt-lg-2">
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
-            <div class="card border-dark">
+            <div class="card card-project border-dark">
               <img src="./static/images/hdbs_general.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/hdbs">
                 <h4 class="card-header">HDBS</h4>
@@ -159,7 +160,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-12 mt-2 mt-lg-0">
-            <div class="card border-dark">
+            <div class="card card-project border-dark">
               <img src="./static/images/QGen_logo.webp" class="img-fluid card-img" />
               <a href="https://github.com/JurajDoncevic/QGen">
                 <h4 class="card-header">QGen</h4>
