--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               </a>
               <div class="card-body">
                 <p>
-                  A scriptable web crawler and scraper with a rudimentary language called CrawLang implemented with
+                  A scriptable web crawler and scraper with a rudimentary language called CrawlLang implemented with
                   ANTLR4
                 </p>
               </div>
