some quick fixes;

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="container">
 
       <h1>Juraj's Personal Website</h1>
-      <h4 class="link-secondary no-decoration">Just like the 90s, but with Bootstrap!
+      <h4 class="link-secondary no-decoration">Just like the <span style="text-decoration: underline;" onclick="vapor(this)">90s</span>, but with Bootstrap!
       </h4>
       <div class="mb-md-5 mb-2"></div>
       <div class="row">
         <div class="col-md-4 col-12 order-0 order-md-1">
           <div class="card border-dark">
-            <img src="./static/images/JurajDoncevic.webp" class="card-img-top img-fluid" />
+            <img id="jura" src="./static/images/JurajDoncevic.webp" alt-src="./static/images/vapor/JurajDoncevic.webp" class="card-img-top img-fluid" />
             <div class="card-body">
               MSc. (mag. ing.)<br />
               Teaching Assistant<br />
