fixed some accessibility issues

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
               <br />
               <div class="text-center">
                 <a href="https://www.fer.unizg.hr/juraj.doncevic"><img class="img-thumbnail"
-                    src="./static/images/FER_logo.png"></a>
+                    src="./static/images/FER_logo.png" alt="FER"></a>
                 <a href="https://github.com/JurajDoncevic"><img class="img-thumbnail"
-                    src="./static/images/github_logo.png"></a>
+                    src="./static/images/github_logo.png" alt="Github"></a>
                 <a href="https://www.researchgate.net/profile/Juraj-Doncevic"><img class="img-thumbnail"
-                    src="./static/images/researchgate_logo.png"></a>
+                    src="./static/images/researchgate_logo.png" alt="ResearchGate"></a>
                 <a href="https://orcid.org/0000-0001-5221-6848"><img class="img-thumbnail"
-                    src="./static/images/orcid_logo.png"></a><br />
+                    src="./static/images/orcid_logo.png" alt="ORCiD"></a><br />
               </div>
             </div>
           </div>
@@ -66,17 +66,15 @@
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0">
               <p>
                 He is <b>interested</b> in:
-                <b>
                   <ul>
-                    <li>Software architectures</li>
-                    <li>Software design</li>
-                    <li>Data management</li>
-                    <li>Functional programming</li>
-                    <li>Bidirectional transformations</li>
-                    <li>Category theory</li>
-                    <li>Type theory</li>
+                    <li><b>Software architectures</b></li>
+                    <li><b>Software design</b></li>
+                    <li><b>Data management</b></li>
+                    <li><b>Functional programming</b></li>
+                    <li><b>Bidirectional transformations</b></li>
+                    <li><b>Category theory</b></li>
+                    <li><b>Type theory</b></li>
                   </ul>
-                </b>
               </p>
             </div>
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0 offset-lg-1">
