--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
             <img class="img-fluid card-img" src="./static/images/books/ddia_kleppman.jpg" />
           </div>
           <div class="card col-12 col-sm-6 col-md-3">
+            <img class="img-fluid card-img" src="./static/images/books/evans_ddd.jpg" />
+          </div>
+          <div class="card col-12 col-sm-6 col-md-3">
             <img class="img-fluid card-img" src="./static/images/books/dehghani_data_mesh.jpg" />
           </div>
           <div class="card col-12 col-sm-6 col-md-3">
