--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0 offset-lg-1">
               <b>Proficient</b> in:
               <ul>
-                <li><b>Languages:</b> C\#, F\#, Python, Haskell, C, Java, Javascript, </li>
+                <li><b>Languages:</b> C#, F#, Python, Haskell, C, Java, Javascript, </li>
                 <li><b>Frameworks:</b> .NET (ASP, WPF), Spring, Express.js, Django, Flask</li>
                 <li><b>Databases:</b>MSSQL, MySQL, Postgres, MongoDb, Sqlite, LiteDb</li>
                 <li><b>Specialized libraries:</b> ANTLR4</li>
