--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Juraj Doncevic - Personal website">
   <meta name="author" content="Juraj Doncevic">
-  <meta name="keywords" content="Doncevic, FER, Software">
+  <meta name="keywords" content="Doncevic, Dončević, Juraj Doncevic, FER, Software architect, Researcher">
+  <meta name="google-site-verification" content="sJQFcEr2cakQrcAzls3u4Znc3HHSoLcCyYUzALc5nP4" />
   <title>Juraj Doncevic - Personal Website</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
