--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Juraj Doncevic - Personal website">
   <meta name="author" content="Juraj Doncevic">
   <meta name="keywords" content="Doncevic, Dončević, Juraj Doncevic, FER, Software architect, Researcher">
+  <meta name="google-site-verification" content="Zy4QAoz5rP0S6QIG1Le9J04z88kVpux9o1KSa8fWKFg" />
   <meta name="google-site-verification" content="sJQFcEr2cakQrcAzls3u4Znc3HHSoLcCyYUzALc5nP4" />
   <title>Juraj Doncevic - Personal Website</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
