--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="card border-dark">
             <img id="jura" src="./static/images/JurajDoncevic.webp" alt-src="./static/images/vapor/JurajDoncevic.webp" class="card-img-top img-fluid" />
             <div class="card-body">
-              MSc. (mag. ing.)<br />
+              PhD (dr. sc.)<br />
               Teaching Assistant<br />
               @ZPR-FER-UNIZG<br />
               <a href="javascript:startMail('hwne.wbqpairpvs@eru.e');"><span id="v1mail_1_642db265bcae7"></span>
@@ -52,16 +52,16 @@
         </div>
         <div class="col-md-8 col-12 order-1 order-md-0 mt-3 mt-md-0">
           <p>
-            <b>Juraj Dončević MSc.</b> is a PhD student and teaching assistant at the Faculty of Electrical Engineering,
+            <b>Juraj Dončević PhD</b> is a teaching assistant at the Faculty of Electrical Engineering,
             University
-            of Zagreb. He is currently employed at the Department for Applied Computing.
+            of Zagreb. He is currently employed at the Department of Applied Computing. In 2024 he defended his PhD thesis titled:
+            "Extension of the mediator-wrapper architecture for heterogeneous data source integration by adding a mask".
           </p>
           <p>
             Currently focused on researching software architecture, software design, data management,
             bidirectionalization and functional programming. Long-standing organizer
             of the Open Doors Day at FER for the Department of Applied Computing, promoting STEM to younger students.
-            Proficient in multiple programming languages and techonologies. Currently working on his PhD thesis:
-            "Extension of the mediator-wrapper architecture for heterogeneous data source integration by adding a mask".
+            Proficient in multiple programming languages and techonologies. 
           </p>
           <div class="row justify-content-center">
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0">
