--- a/index.html
+++ b/index.html
@@ -180,20 +180,21 @@
             Mediator–Wrapper Architecture for Heterogeneous Data Source Integration. Applied Sciences, 13(4), Article 4.
             <a href="https://doi.org/10.3390/app13042471">https://doi.org/10.3390/app13042471</a>
           </li>
+          <li>
+            J. Dončević, K. Fertalj, M. Brcic and M. Kovač, "Mask–Mediator–Wrapper architecture as a Data Mesh driver" 
+            in IEEE Transactions on Software Engineering, doi: <a href="https://doi.org/10.1109/TSE.2024.3367126">10.1109/TSE.2024.3367126</a>
+          </li>
           <li>Krajna, A., Brcic, M., Lipic, T., & Doncevic, J. (2022). Explainability in reinforcement learning:
-            Perspective and position (arXiv:2203.11547). arXiv. <a
-              href="https://doi.org/10.48550/arXiv.2203.11547">https://doi.org/10.48550/arXiv.2203.11547</a></li>
-          <li>Dončević, J., Fertalj, K., Brčić, M., & Kovač, M. (2022). Mask-Mediator-Wrapper architecture as a Data
-            Mesh driver (arXiv:2209.04661). arXiv. <a
-              href="https://doi.org/10.48550/arXiv.2209.04661">https://doi.org/10.48550/arXiv.2209.04661</a></li>
+            Perspective and position (arXiv:2203.11547). arXiv. <a href="https://doi.org/10.48550/arXiv.2203.11547">https://doi.org/10.48550/arXiv.2203.11547</a>
+          </li>
           <li>Dončević, J., & Fertalj, K. (2020). Database Integration Systems. 2020 43rd International Convention on
             Information, Communication and Electronic Technology (MIPRO), 1617–1622.
             <a href="https://doi.org/10.23919/MIPRO48935.2020.9245245">//doi.org/10.23919/MIPRO48935.2020.9245245</a>
           </li>
           <li>D. Mlinarić, V. Mornar and J. Dončević, "Ranking model for dormitory admission process," 2022 45th
             Jubilee International Convention on Information, Communication and Electronic Technology (MIPRO), 2022, pp.
-            1088-1092, doi: <a
-              href="https://doi.org/10.23919/MIPRO55190.2022.9803654">10.23919/MIPRO55190.2022.9803654</a>.</li>
+            1088-1092, doi: <a href="https://doi.org/10.23919/MIPRO55190.2022.9803654">10.23919/MIPRO55190.2022.9803654</a>.
+          </li>
         </ul>
       </div>
       <div class="row mt-3">
