--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
             <a href="https://doi.org/10.3390/app13042471">https://doi.org/10.3390/app13042471</a>
           </li>
           <li>
-            J. Dončević, K. Fertalj, M. Brcic and M. Kovač, "Mask–Mediator–Wrapper architecture as a Data Mesh driver" 
-            in IEEE Transactions on Software Engineering, doi: <a href="https://doi.org/10.1109/TSE.2024.3367126">10.1109/TSE.2024.3367126</a>
+            Doncevic, J., Fertalj, K., Brcic, M., & Kovac, M. (2024). Mask–Mediator–Wrapper architecture as a Data Mesh driver. IEEE Transactions on Software Engineering. 
+            doi: <a href="https://doi.org/10.1109/TSE.2024.3367126">10.1109/TSE.2024.3367126</a>
           </li>
           <li>Krajna, A., Brcic, M., Lipic, T., & Doncevic, J. (2022). Explainability in reinforcement learning:
             Perspective and position (arXiv:2203.11547). arXiv. <a href="https://doi.org/10.48550/arXiv.2203.11547">https://doi.org/10.48550/arXiv.2203.11547</a>
