--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <a href="https://doi.org/10.3390/app13042471">https://doi.org/10.3390/app13042471</a>
           </li>
           <li>
-            Doncevic, J., Fertalj, K., Brcic, M., & Kovac, M. (2024). Mask–Mediator–Wrapper architecture as a Data Mesh driver. IEEE Transactions on Software Engineering. 
+            Dončević, J., Fertalj, K., Brčić, M., & Kovač, M. (2024). Mask–Mediator–Wrapper architecture as a Data Mesh driver. IEEE Transactions on Software Engineering. 
             doi: <a href="https://doi.org/10.1109/TSE.2024.3367126">10.1109/TSE.2024.3367126</a>
           </li>
           <li>Krajna, A., Brcic, M., Lipic, T., & Doncevic, J. (2022). Explainability in reinforcement learning:
