--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     <div class="container">
 
       <h1>Juraj's Personal Website</h1>
-      <h4 class="link-secondary no-decoration">Just like the <span style="text-decoration: underline;" onclick="vapor(this)">90s</span>, but with Bootstrap!
+      <h4 class="link-secondary no-decoration">Just like the <span style="text-decoration: underline;"
+          onclick="vapor(this)">90s</span>, but with Bootstrap!
       </h4>
       <div class="mb-md-5 mb-2"></div>
       <div class="row">
         <div class="col-md-4 col-12 order-0 order-md-1">
           <div class="card border-dark">
-            <img id="jura" src="./static/images/JurajDoncevic.webp" alt-src="./static/images/vapor/JurajDoncevic.webp" class="card-img-top img-fluid" />
+            <img id="jura" src="./static/images/JurajDoncevic.webp" alt-src="./static/images/vapor/JurajDoncevic.webp"
+              class="card-img-top img-fluid" />
             <div class="card-body">
               PhD (dr. sc.)<br />
               Teaching Assistant<br />
@@ -54,37 +56,44 @@
           <p>
             <b>Juraj Dončević PhD</b> is a teaching assistant at the Faculty of Electrical Engineering,
             University
-            of Zagreb. He is currently employed at the Department of Applied Computing. In 2024 he defended his PhD thesis titled:
+            of Zagreb. He is currently employed at the Department of Applied Computing. In 2024 he defended his PhD
+            thesis:
             "Extension of the mediator-wrapper architecture for heterogeneous data source integration by adding a mask".
           </p>
           <p>
-            Currently focused on researching software architecture, software design, data management,
-            bidirectionalization and functional programming. Long-standing organizer
-            of the Open Doors Day at FER for the Department of Applied Computing, promoting STEM to younger students.
-            Proficient in multiple programming languages and techonologies. 
+            His research is focused on software architecture, software design, data management,
+            bidirectionalization and functional programming. He is currently working on Janus V2.0 and a library of
+            BX lenses in C# (both projects are pending funding). Long-standing organizer of the Open Doors Day at FER
+            for the Department of Applied
+            Computing,
+            promoting STEM to younger students.
+            Proficient in multiple programming languages and techonologies.
+          </p>
+          <p>
+            Full CV document available <a href="/static/docs/JurajDoncevic_CV.pdf">here</a>.
           </p>
           <div class="row justify-content-center">
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0">
               <p>
                 He is <b>interested</b> in:
-                  <ul>
-                    <li><b>Software architectures</b></li>
-                    <li><b>Software design</b></li>
-                    <li><b>Data management</b></li>
-                    <li><b>Functional programming</b></li>
-                    <li><b>Bidirectional transformations</b></li>
-                    <li><b>Category theory</b></li>
-                    <li><b>Type theory</b></li>
-                  </ul>
+              <ul>
+                <li><b>Software architectures</b></li>
+                <li><b>Software design</b></li>
+                <li><b>Data management</b></li>
+                <li><b>Functional programming</b></li>
+                <li><b>Bidirectional transformations</b></li>
+                <li><b>Category theory</b></li>
+                <li><b>Type theory</b></li>
+              </ul>
               </p>
             </div>
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0 offset-lg-1">
               <b>Proficient</b> in:
               <ul>
-                <li><b>Languages:</b> C#, F#, Python, Haskell, C, Java, Javascript, </li>
+                <li><b>Languages:</b> C#, Python, F#, Rust, Haskell, C, Java, Javascript, </li>
                 <li><b>Frameworks:</b> .NET (ASP, WPF), Spring, Express.js, Django, Flask</li>
                 <li><b>Databases:</b>MSSQL, MySQL, Postgres, MongoDb, Sqlite, LiteDb</li>
-                <li><b>Specialized libraries:</b> ANTLR4</li>
+                <li><b>Specialized libraries:</b> ANTLR4, Selenium</li>
               </ul>
               <b>Wants to</b> learn or get better at:
               <ul>
@@ -181,11 +190,13 @@
             <a href="https://doi.org/10.3390/app13042471">10.3390/app13042471</a>
           </li>
           <li>
-            Dončević, J., Fertalj, K., Brčić, M., & Kovač, M. (2024). Mask–Mediator–Wrapper architecture as a Data Mesh driver. IEEE Transactions on Software Engineering. 
+            Dončević, J., Fertalj, K., Brčić, M., & Kovač, M. (2024). Mask–Mediator–Wrapper architecture as a Data Mesh
+            driver. IEEE Transactions on Software Engineering.
             doi: <a href="https://doi.org/10.1109/TSE.2024.3367126">10.1109/TSE.2024.3367126</a>
           </li>
           <li>Krajna, A., Brcic, M., Lipic, T., & Doncevic, J. (2022). Explainability in reinforcement learning:
-            Perspective and position (arXiv:2203.11547). arXiv. <a href="https://doi.org/10.48550/arXiv.2203.11547">10.48550/arXiv.2203.11547</a>
+            Perspective and position (arXiv:2203.11547). arXiv. <a
+              href="https://doi.org/10.48550/arXiv.2203.11547">10.48550/arXiv.2203.11547</a>
           </li>
           <li>Dončević, J., & Fertalj, K. (2020). Database Integration Systems. 2020 43rd International Convention on
             Information, Communication and Electronic Technology (MIPRO), 1617–1622.
@@ -193,7 +204,8 @@
           </li>
           <li>D. Mlinarić, V. Mornar and J. Dončević, "Ranking model for dormitory admission process," 2022 45th
             Jubilee International Convention on Information, Communication and Electronic Technology (MIPRO), 2022, pp.
-            1088-1092, doi: <a href="https://doi.org/10.23919/MIPRO55190.2022.9803654">10.23919/MIPRO55190.2022.9803654</a>.
+            1088-1092, doi: <a
+              href="https://doi.org/10.23919/MIPRO55190.2022.9803654">10.23919/MIPRO55190.2022.9803654</a>.
           </li>
         </ul>
       </div>
