--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Proficient in multiple programming languages and techonologies.
           </p>
           <p>
-            Full CV document available <a href="/static/docs/JurajDoncevic_CV.pdf">here</a>.
+            Full CV document available <a href="/static/docs/JurajDoncevic_CV.pdf" target="_blank">here</a>.
           </p>
           <div class="row justify-content-center">
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0">
