--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p>
             <b>Juraj Dončević PhD</b> is a teaching assistant at the Faculty of Electrical Engineering,
             University
-            of Zagreb. He is currently employed at the Department of Applied Computing. In 2024 he defended his PhD
+            of Zagreb. He is currently employed at the Department of Applied Computing. In 2024, he defended his PhD
             thesis:
             "Extension of the mediator-wrapper architecture for heterogeneous data source integration by adding a mask".
           </p>
