--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
           <p>
             His research is focused on software architecture, software design, data management,
             bidirectionalization and functional programming. He is currently working on Janus V2.0 and a library of
-            BX lenses in C# (both projects are pending funding). Long-standing organizer of the Open Doors Day at FER
-            for the Department of Applied
-            Computing,
-            promoting STEM to younger students.
+            BX lenses in C# (both projects are pending funding).
             Proficient in multiple programming languages and techonologies.
           </p>
           <p>
