--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container">
 
       <h1>Juraj's Personal Website</h1>
-      <h4 class="link-secondary no-decoration">Just like the <span style="text-decoration: underline;"
-          onclick="vapor(this)">90s</span>, but with Bootstrap!
+      <h4 class="link-secondary no-decoration">Certainly, <span style="text-decoration: underline;"
+          onclick="vapor(this)">here</span> is a possible personal website for you...
       </h4>
       <div class="mb-md-5 mb-2"></div>
       <div class="row">
