--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 <a href="https://orcid.org/0000-0001-5221-6848"><img class="img-thumbnail"
                     src="./static/images/orcid_logo.png" alt="ORCiD"></a><br />
               </div>
+              <br>
+              <div class="text-center">
+                Owner of:<br />
+                <a href="https://bobotine.hr"><img src="./static/images/bobotine_logo_md.png" class="img-thumbnail w-50"/></a>
+              </div>
             </div>
           </div>
         </div>
