--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
       <h1>Juraj's Personal Website</h1>
       <h4 id="subtitle" class="link-secondary no-decoration">
-     </h4>
+      </h4>
       <div class="mb-md-5 mb-2"></div>
       <div class="row">
         <div class="col-md-4 col-12 order-0 order-md-1">
           <div class="card border-dark">
             <img id="jura" src="./static/images/JurajDoncevic.webp" alt-src="./static/images/vapor/JurajDoncevic.webp"
-                class="card-img-top img-fluid" onclick="vapor(this)" />
+              class="card-img-top img-fluid" onclick="vapor(this)" />
             <div class="card-body">
               PhD (dr. sc.)<br />
-              Teaching Assistant<br />
+              Senior Assistant (Postdoctoral researcher)<br />
               @ZPR-FER-UNIZG<br />
               <a href="javascript:startMail('hwne.wbqpairpvs@eru.e');"><span id="v1mail_1_642db265bcae7"></span>
                 <script
@@ -40,26 +40,30 @@
               </a><br />
               <br />
               <div class="text-center">
-                <a href="https://www.fer.unizg.hr/juraj.doncevic"><img class="img-thumbnail"
+                <a href="https://www.fer.unizg.hr/juraj.doncevic"><img class="img-thumbnail" width="64"
                     src="./static/images/FER_logo.png" alt="FER"></a>
-                <a href="https://github.com/JurajDoncevic"><img class="img-thumbnail"
+                <a href="https://github.com/JurajDoncevic"><img class="img-thumbnail" width="64"
                     src="./static/images/github_logo.png" alt="Github"></a>
-                <a href="https://www.researchgate.net/profile/Juraj-Doncevic"><img class="img-thumbnail"
+                <a href="https://orcid.org/0000-0001-5221-6848"><img class="img-thumbnail" width="64"
+                    src="./static/images/orcid_logo.png" alt="ORCiD"></a>
+                <a href="https://www.researchgate.net/profile/Juraj-Doncevic"><img class="img-thumbnail" width="64"
                     src="./static/images/researchgate_logo.png" alt="ResearchGate"></a>
-                <a href="https://orcid.org/0000-0001-5221-6848"><img class="img-thumbnail"
-                    src="./static/images/orcid_logo.png" alt="ORCiD"></a><br />
+                <a href="https://www.linkedin.com/in/juraj-don%C4%8Devi%C4%87-b6149a325/"><img class="img-thumbnail"
+                    width="64" src="./static/images/linkedin_logo.png" alt="LinkedIn"></a>
               </div>
               <br>
               <div class="text-center">
                 Owner of:<br />
-                <a href="https://bobotine.hr"><img src="./static/images/bobotine_logo_md.png" class="img-thumbnail w-50"/></a>
+                <a href="https://bobotine.hr"><img src="./static/images/bobotine_logo_md.png"
+                    class="img-thumbnail w-50" /></a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-8 col-12 order-1 order-md-0 mt-3 mt-md-0">
           <p>
-            <b>Juraj Dončević PhD</b> is a teaching assistant at the Faculty of Electrical Engineering,
+            <b>Juraj Dončević PhD</b> is a senior assistant (postdoctoral researcher) at the Faculty of Electrical
+            Engineering,
             University
             of Zagreb. He is currently employed at the Department of Applied Computing. In 2024, he defended his PhD
             thesis:
@@ -77,7 +81,7 @@
           <div class="row justify-content-center">
             <div class="jumbotron col-12 col-lg-5 border border-dark rounded-3 mt-3 mt-lg-0">
               <p>
-                He is <b>interested</b> in:
+                <b>Interested</b> in:
               <ul>
                 <li><b>Software architectures</b></li>
                 <li><b>Software design</b></li>
